--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "node-sessionstorage": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
