--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/thanhdaonguyen/SchedUET-SQLvers#readme",
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.0",
-    "axios": "^1.5.1",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.1",
